Corrected alignment of new FAQs

--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -26,6 +26,8 @@
   transition: color 0.1s linear;
   cursor: pointer;
   color: black;
+  overflow: hidden;
+  will-change: height;
 }
 
 .panel__label:focus {
